# ferrofluid-voice

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: LICENSE-THIRD-PARTY.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/audio/: recorder.rs
src-tauri/src/storage/: db.rs
src-tauri/src/stt/: mod.rs  model_manager.rs  silero_tts.py  tts.rs  whisper.rs
src-tauri/src/system/: clipboard.rs  hotkey.rs  keyboard.rs  mod.rs  paths.rs
src/components/: FerrofluidOrb.tsx  GlassCard.tsx  HistoryList.tsx  ModelSetup.tsx  RecordButton.tsx  SettingsPanel.tsx  SoundWave.tsx  StatusPill.tsx  TranscriptEditor.tsx  TtsModelsPanel.tsx  Widget.tsx
src/lib/: format.ts  locales.ts  tauri.ts  types.ts
src/pages/: HistoryPage.tsx  HomePage.tsx  LibraryPage.tsx  SettingsPage.tsx
src/styles/: globals.css
