[package]
name = "voiceglass"
version = "0.1.0"
description = "Local desktop dictation app powered by Whisper"
authors = ["VoiceGlass"]
edition = "2021"

[lib]
name = "voiceglass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "5"
hound = "3"
opener = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
